# hedgehoghd

./: CMakeLists.txt  NOTES  README  README.md
doc/: Makefile  make.bat
doc/source/: conf.py  importer.rst  index.rst
hedgehoghd/importer/: __init__.py  chunk.py  chunk_array.py  collision_array.py  collision_index.py  collision_tile.py  hedgehoghd_import.py  kosinski.py  level_layout.py  sonic2.py  tile.py  zone.py
hedgehoghd/importer/test/: kosinski_test.py
importer/: kosinski.py  sonic2.py
spike/: kos.c  kosinski-kens.py  kosinski.py  s2_128mapping_dump.py  s2_collision_dump.py  s2_dump.py  s2_level_dump.py
spike/test/: kosinski_test.py
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  editor_application.cpp  editor_application.h  editor_window.cpp  editor_window.h  hedgehoghd_editor_main.cpp  testdialog.ui
src/engine/: CMakeLists.txt  act.cpp  act.h  chunk.cpp  chunk.h  game.cpp  game.h  hhd_engine.h  layout.cpp  layout.h  zone.cpp  zone.h
